# rvoip_sip_client

./: COROUTINE_REFACTOR_PLAN.md  Cargo.toml  RACE_CONDITION_FIX.md  README.md  tailwind.config.js  two_phase_termination_plan.md
assets/: tailwind.css
src/: event_channel.rs  event_handler.rs  main.rs  network_utils.rs  sip_client.rs
src/audio/: audio_controls.rs  device_manager.rs  mod.rs
src/commands/: mod.rs  sip_commands.rs
src/components/: app.rs  audio_controls.rs  audio_panel.rs  call_control_buttons.rs  call_control_state.rs  call_controls.rs  call_interface_screen.rs  call_interface_screen_backup.rs  call_interface_screen_broken.rs  call_interface_screen_new.rs  call_interface_screen_refactored.rs  call_interface_screen_simple.rs  call_interface_screen_simple_backup.rs  call_make_input.rs  call_status.rs  dtmf_keypad.rs  hook_status.rs  incoming_call_screen.rs  make_call_form_broken.rs  make_call_form_simple.rs  mod.rs  receiver_status.rs  registration_screen.rs  title_banner.rs  transfer_dialog.rs  user_info_bar.rs
