[package]
name = "sip_client"
version = "0.1.1"
edition = "2021"

[dependencies]
# Dioxus for the GUI
dioxus = { version = "0.6.3", features = ["desktop"] }
dioxus-logger = "0.5"

# RVOIP - Modern Rust VoIP Stack (using local copy with audio buffer fixes)
rvoip = "0.1.13"

# Additional dependencies for async and networking
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Audio and media handling
cpal = "0.15"

[dev-dependencies]
tokio-test = "0.4" 