[package]
name = "sip_client"
version = "0.1.1"
edition = "2021"

[dependencies]
# Dioxus for the GUI
dioxus = { version = "0.7", features = ["desktop"] }
lucide-dioxus = { version = "2.24.0", features = ["communication", "multimedia", "arrows", "development"] }

# RVOIP - Modern Rust VoIP Stack
##rvoip = "0.1.26"
rvoip = { path = "../rvoip/crates/rvoip" }
# Supported cpal audio-device bridge (capture/playback, 20ms pacing, band-limited
# resampling, jitter buffer, mute, VU) — replaces the hand-written src/audio bridge.
rvoip-audio-device = { path = "../rvoip/crates/media/rvoip-audio-device" }

# Additional dependencies for async and networking
tokio = { version = "1.0", features = ["full"] }
futures-util = "0.3"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
async-trait = "0.1"
uuid = { version = "1.0", features = ["v4"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Network utilities
local-ip-address = "0.6"

[dev-dependencies]
tokio-test = "0.4"

# Optimize for size in release builds
[profile.release]
opt-level = "z"     # Optimize for size
lto = true          # Enable Link Time Optimization
codegen-units = 1   # Single codegen unit for better optimization
strip = true        # Strip symbols from binary
panic = "abort"     # Smaller panic handler